public/css/sass-modules/_panels.scss
.mapPanel {
    position: absolute;
        top: 4.35rem;
        right: 0;
        bottom: 0;
        left: 20rem;

    #clearFeaturesControl {
        top:100px;
        left:0.5em;

        button { width:7em; }
    }
}

.windowPanel {
    position: absolute;
        top: 4.35rem;
        bottom: 0;
        left: 0;
    width: 20rem;

    &-header {
        background-color: $cob-blue;
        color: #fff;

        margin: 0;

        &Tools {
            border-left: 1px solid $cob-blue-light;
            height: 1.5rem;
            padding: 0 .25rem 0 .25rem;
            position: absolute;
                top: 0;
                right: 0;

            > .button {
                background: $cob-blue;
                border: 0;
                border-radius: 0;
                cursor: pointer;
                display: block;
                height: (24rem/16);
                padding: 0;
                position: relative;
                text-indent: -1000rem;
                transition: background-color .25s ease-in-out;
                width: (24rem/16);

                &:hover {
                    background: $cob-blue-light;
                }
                &:focus, &:active {
                    background: $cob-blue;
                    outline: 1px solid $cob-blue-light;
                }

                &.add {
                    &:before {
                        background: #fff;
                        content: ' ';
                        display: block;
                        height: (18rem/16);
                        position: absolute;
                            top: (3rem/16);
                            left: (11rem/16);
                        width: (2rem/16);
                    }
                    &:after {
                        background: #fff;
                        content: ' ';
                        display: block;
                        height: (2rem/16);
                        position: absolute;
                            top: (11rem/16);
                            left: (3rem/16);
                        width: (18rem/16);
                    }
                }
                &.back {
                    &:before {
                        background: #fff;
                        content: ' ';
                        display: block;
                        height: (12rem/16);
                        position: absolute;
                            top: (3rem/16);
                            left: (10rem/16);
                        transform: rotate(45deg);
                        width: (2rem/16);
                    }
                    &:after {
                        background: #fff;
                        content: ' ';
                        display: block;
                        height: (12rem/16);
                        position: absolute;
                            top: (10rem/16);
                            left: (10rem/16);
                        transform: rotate(-45deg);
                        width: (2rem/16);
                    }
                }
                &.cancel {
                    &:before {
                        background: #fff;
                        content: ' ';
                        display: block;
                        height: (18rem/16);
                        position: absolute;
                            top: (3rem/16);
                            left: (11rem/16);
                        transform: rotate(45deg);
                        width: (2rem/16);
                    }
                    &:after {
                        background: #fff;
                        content: ' ';
                        display: block;
                        height: (2rem/16);
                        position: absolute;
                            top: (11rem/16);
                            left: (3rem/16);
                        transform: rotate(45deg);
                        width: (18rem/16);
                    }
                }
            }

        }
    }
    &-title {
        font-family: $font-family-heading;
        font-size: (20rem/16);
        font-weight: 300;
        margin: 0 0 0 .5rem;
        padding: .1rem 0 .5rem 0;
    }
}

.searchPanel {
    background: $color-background-field;
    border-bottom: 1px solid $color-border-input;
    padding: 0 .5rem;
}

.editPanel {
    background: $color-background-field;
    overflow: auto;
    padding: 0 .5rem;
    position: absolute;
        top: 2rem;
        right: 0;
        bottom: 0;
        left: 0;
}

